; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_epca.c_pcxi_memwinon.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_epca.c_pcxi_memwinon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.board_info = type { i32 }

@FEPMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.board_info*, i32)* @pcxi_memwinon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcxi_memwinon(%struct.board_info* %0, i32 %1) #0 {
  %3 = alloca %struct.board_info*, align 8
  %4 = alloca i32, align 4
  store %struct.board_info* %0, %struct.board_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.board_info*, %struct.board_info** %3, align 8
  %6 = getelementptr inbounds %struct.board_info, %struct.board_info* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @inb(i32 %7)
  %9 = load i32, i32* @FEPMEM, align 4
  %10 = or i32 %8, %9
  %11 = load %struct.board_info*, %struct.board_info** %3, align 8
  %12 = getelementptr inbounds %struct.board_info, %struct.board_info* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @outb_p(i32 %10, i32 %13)
  ret void
}

declare dso_local i32 @outb_p(i32, i32) #1

declare dso_local i32 @inb(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
